# OpenCV_learn

./: .gitignore  CMakeLists.txt
include/read_video/: CMakeLists.txt
include/read_video/include/: ReadVideo.hpp
include/read_video/src/: ReadVideo.cpp
include/read_write_img/: CMakeLists.txt
include/read_write_img/include/: ReadWriteImg.hpp
include/read_write_img/src/: ReadWriteImg.cpp
src/: main.cpp
